...
                                                    <rect key="frame" x="15" y="13.5" width="164" height="17"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="17" id="Fxd-BU-NpP"/>
                                                        <constraint firstAttribute="width" constant="164" id="pFa-h7-Fp7"/>
                                                    </constraints>
                                                    <attributedString key="attributedText">
                                                        <fragment content="Title">
                                                            <attributes>
                                                                <font key="NSFont" metaFont="system" size="14"/>
                                                            </attributes>
                                                        </fragment>
                                                    </attributedString>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kg2-uZ-QsV">
                                                    <rect key="frame" x="182" y="13.5" width="115" height="17"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01.01.19" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FUr-E9-Paj">
                                                    <rect key="frame" x="300" y="13.5" width="60" height="17"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="date"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="60" id="rzi-je-HMf"/>
                                                        <constraint firstAttribute="height" constant="17" id="wjB-eX-Zwq"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <nil key="textColor"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LA3-Ah-eZo">
                                        <rect key="frame" x="0.0" y="40" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kit-W7-CJ7">
                                        <rect key="frame" x="0.0" y="80" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Btg-G2-5Ck">
                                        <rect key="frame" x="0.0" y="120" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="US5-W4-hQd">
                                        <rect key="frame" x="0.0" y="160" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gcf-CV-ZEt">
                                        <rect key="frame" x="0.0" y="200" width="343" height="30"/>
                                        <color key="backgroundColor" red="0.18193183582115705" green="0.89925047588832485" blue="0.29691621509510768" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="save">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="save" destination="1cW-x0-rz8" eventType="touchUpInside" id="YzX-IF-5wb"/>
                                        </connections>
                                    </button>
...
